--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
     </header>
 
     <main>
-        <section class="home fluid-container pt-5 px-4">
+        <section class="home fluid-container pt-5 pl-4">
             <div class="row">
                 <div class="col-md">
-                    <h1 id="l1" class="h3 line typing1 home__name">Joshua Le Gresley</h1>
+                    <h1 id="l1" class="line typing1 home__name">Joshua Le Gresley</h1>
                 </div>
                 <div class="col-md">
-                    <h2 id="l2" class="h4 line typing2 home__name">Web Developer</h2>
+                    <h2 id="l2" class="line typing2 home__name">Web Developer</h2>
                 </div>
             </div>
             <div class="social-icons">
