--- a/index.html
+++ b/index.html
@@ -68,15 +68,31 @@
     </header>
 
     <main>
-        <section class="home fluid-container pt-5 pl-4">
-            <div class="row">
-                <div class="col-md">
-                    <h1 id="l1" class="line typing1 home__name">Joshua Le Gresley</h1>
-                </div>
-                <div class="col-md">
-                    <h2 id="l2" class="line typing2 home__name">Web Developer</h2>
+        <section class="home">
+            <!-- for small screens -->
+            <div id="smTitle">
+                <div class="home__top">
+                    <div class="title-name">
+                        <h1 id="l1" class="line typing1 name">Joshua Le Gresley</h1>
+                    </div>
+                    <div class="title-position">
+                        <h2 id="l2" class="line typing2 name">Web Developer....</h2>
+                    </div>
                 </div>
             </div>
+            <!-- for large sceens -->
+            <div id="lgTitle">
+                <div class="home__center">
+                    <div class="title-name">
+                        <h1 class="home__namelg line typing">Joshua Le Gresley</h1>
+                    </div>
+                    <div class="title-position">
+                        <h2>Web developer</h2>
+                    </div>
+                </div>
+            </div>
+
+
             <div class="social-icons">
                 <a class="social-icons__item" href="https://www.linkedin.com/in/joshua-le-gresley/">
                     <i class="fab fa-linkedin fa-2x trans-hover"></i>
@@ -102,7 +118,6 @@
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
     </script>
 
-    <script src="./dist/js/media.js" type="text/javascript"></script>
     <script src="./dist/js/main.js" type="text/javascript"></script>
     <script src="./dist/js/typing.js" type="text/javascript"></script>
 
