change typing length

--- a/index.html
+++ b/index.html
@@ -82,14 +82,16 @@
             </div>
             <!-- for large sceens -->
             <div id="lgTitle">
-                <div class="home__center">
-                    <div class="title-name">
-                        <h1 class="home__namelg line typing">Joshua Le Gresley</h1>
-                    </div>
-                    <div class="title-position">
+                <div class="">
+                    <div class="">
+                        <h1 class="home__name line typing">Joshua Le Gresley</h1>
                         <h2>Web developer</h2>
                     </div>
+                    <div class="">
+                       
+                    </div>
                 </div>
+
             </div>
 
 
